Update invitation image in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     <!-- MÓDULO 1: Invitación -->
     <section>
-  <div class="invitar1"><img src="assets/Invitar.png" alt="Separador floral">
+  <div class="invitar1">
+    <img src="assets/invitar.png" alt="Separador floral">
   </div>
 </section>
 
