--- a/index.html
+++ b/index.html
@@ -66,12 +66,8 @@
     <!-- MÓDULO 3: Lugar -->
 <section class="module" id="module3">
   <div class="image-overlay"><img src="images/lugar2.jpg" alt="Lugar">
-
-    <a 
-      class="map-link overlay"
-      href="https://maps.app.goo.gl/WERZ4ExchAtmpv417"
-      target="_blank"
-    >
+   <a class="map-link overlay"href="https://maps.app.goo.gl/WERZ4ExchAtmpv417"
+      target="_blank">
       VER UBICACIÓN
     </a>
   </div>
@@ -159,12 +155,8 @@
 
     <!-- MÓDULO 3: hospedaje -->
 <section class="module" id="module3"><div class="image-overlay"><img src="images/hospedaje.png" alt="Lugar">
-
-    <a 
-      class="map-link overlay"
-      href="https://maps.app.goo.gl/FBUYcQTGuFXcTV3M9"
-      target="_blank"
-    >
+ <a class="map-link overlay"href="https://maps.app.goo.gl/FBUYcQTGuFXcTV3M9"
+      target="_blank">
       VER HOTELES
     </a>
   </div>
