--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@
   </div>
 </section>
 
-<!-- SEPARADOR ELEGANTE -->
+    <!-- SEPARADOR ELEGANTE -->
 <section>
   <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
     <!-- MÓDULO : TIEMPOS -->
-    <section class="module" id="module2"><img src="images/info3.jpg" alt="Pareja">
-    </section>
+  <section> 
+    <div class="module" id="module2"><img src="images/info3.jpg" alt="Pareja"> </div>
+  </section>
 
   <!-- SEPARADOR ELEGANTE -->
 <section>
