Replace graphic separator classes in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator1">
+  <div class="graphic-separator">
     <img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
@@ -58,7 +58,7 @@
     </section>
     <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator2"><img src="assets/separador-floral.png" alt="Separador floral">
+  <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
@@ -74,7 +74,7 @@
 
     <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
+  <div class="graphic-separator2"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
@@ -85,7 +85,7 @@
 
   <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator2"><img src="assets/separador-floral.png" alt="Separador floral">
+  <div class="graphic-separator3"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
@@ -148,7 +148,7 @@
 
   <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator2"><img src="assets/separador-floral.png" alt="Separador floral">
+  <div class="graphic-separator4"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
@@ -163,7 +163,7 @@
 
 <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator3"><img src="assets/separador-floral.png" alt="Separador floral">
+  <div class="graphic-separator5"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
