Refactor HTML structure for sections and divs

--- a/index.html
+++ b/index.html
@@ -41,21 +41,20 @@
 
       <!-- SEPARADOR ELEGANTE -->
 <section>
-  <div class="graphic-separator">
-    <img src="assets/separador-floral.png" alt="Separador floral">
+  <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
 </section>
 
     <!-- MÓDULO 1: Invitación -->
     <section>
-  <div class="invitar1">
-    <img src="assets/invitar.png" alt="Separador floral">
+  <div class="invitar1"><img src="assets/invitar.png" alt="Separador floral">
   </div>
-</section>
+   </section>
 
     <!-- MÓDULO 2: Foto pareja -->
     <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
     </section>
+    
     <!-- SEPARADOR ELEGANTE -->
 <section>
   <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
@@ -177,7 +176,9 @@
         <div><span id="seconds2"></span>SEG</div>
       </div>
     </section>
-<section>
+
+    <!-- MÓDULO 6: despedida -->
+    <section>
     <footer>
   <div class="footer1">
     <img src="assets/footer.png" alt="Separador floral">
