Fix closing div tags in index.html

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <!-- SEPARADOR ELEGANTE -->
 <section>
   <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
-  /div>
+  </div>
 </section>
 
     <!-- MÓDULO 1: Invitación -->
     <section>
   <div class="invitar1"><img src="assets/invitar.png" alt="Separador floral">
-  /div>
+  </div>
    </section>
 
     <!-- MÓDULO 2: Foto pareja -->
@@ -58,7 +58,7 @@
     <!-- SEPARADOR ELEGANTE -->
 <section>
   <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
-  /div>
+  </div>
 </section>
 
     <!-- MÓDULO 3: Lugar -->
