--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 </section>
 
     <!-- MÓDULO 1: Invitación -->
-    <section>
+<section>
   <div class="invitar1"><img src="assets/invitar.png" alt="Separador floral">
   </div>
-   </section>
+</section>
 
     <!-- MÓDULO 2: Foto pareja -->
-    <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
-    </section>
+ <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
+ </section>
     
     <!-- SEPARADOR ELEGANTE -->
 <section>
@@ -77,10 +77,10 @@
   </div>
 </section>
 
-    <!-- MÓDULO : TIEMPOS -->
-  <section> 
+    <!-- MÓDULO 4: TIEMPOS -->
+<section> 
     <div class="module" id="module2"><img src="images/info3.jpg" alt="Pareja"> </div>
-  </section>
+</section>
 
   <!-- SEPARADOR ELEGANTE -->
 <section>
@@ -88,7 +88,7 @@
   </div>
 </section>
 
-    <!-- MÓDULO 4: RSVP -->
+    <!-- MÓDULO 5: RSVP -->
 <section class="module" id="module4">
   <div class="paper-card">
 
@@ -151,7 +151,7 @@
   </div>
 </section>
 
-    <!-- MÓDULO 3: hospedaje -->
+    <!-- MÓDULO 6: hospedaje -->
 <section class="module" id="module3"><div class="image-overlay"><img src="images/hospedaje.png" alt="Lugar">
  <a class="map-link overlay"href="https://maps.app.goo.gl/FBUYcQTGuFXcTV3M9"
       target="_blank">
@@ -166,7 +166,7 @@
   </div>
 </section>
 
-    <!-- MÓDULO 5: Foto final + cuenta regresiva -->
+    <!-- MÓDULO 7: Foto final + cuenta regresiva -->
     <section class="module" id="module5"><img src="images/foto_pareja2.jpeg" alt="Pareja">
       <div class="subtitle">Faltan:</div>
       <div class="countdown" style="justify-content:center;">
@@ -177,8 +177,8 @@
       </div>
     </section>
 
-    <!-- MÓDULO 6: despedida -->
-    <section>
+    <!-- MÓDULO 8: despedida -->
+<section>
     <footer>
   <div class="footer1">
     <img src="assets/footer.png" alt="Separador floral">
