--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
  </section>
     
-    <!-- SEPARADOR ELEGANTE -->
+    <!-- SEPARADOR ELEGANTE1 -->
 <section>
   <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
@@ -71,7 +71,7 @@
   </div>
 </section>
 
-    <!-- SEPARADOR ELEGANTE -->
+    <!-- SEPARADOR ELEGANTE2 -->
 <section>
   <div class="graphic-separator2"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
@@ -82,7 +82,7 @@
     <div class="module" id="module2"><img src="images/info3.jpg" alt="Pareja"> </div>
 </section>
 
-  <!-- SEPARADOR ELEGANTE -->
+  <!-- SEPARADOR ELEGANTE3 -->
 <section>
   <div class="graphic-separator3"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
@@ -145,7 +145,7 @@
 </section>
 
 
-  <!-- SEPARADOR ELEGANTE -->
+  <!-- SEPARADOR ELEGANTE4 -->
 <section>
   <div class="graphic-separator4"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
@@ -160,7 +160,7 @@
   </div>
 </section>
 
-<!-- SEPARADOR ELEGANTE -->
+<!-- SEPARADOR ELEGANTE5 -->
 <section>
   <div class="graphic-separator5"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
