--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- PAPER -->
   <div class="paper">
 
-      <!-- SEPARADOR ELEGANTE -->
+      <!-- SEPARADOR ELEGANTE00 -->
 <section>
   <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
