--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </div>
 </section>
 
-    <!-- MÓDULO 2: Foto pareja -->
+    <!-- MÓDULO 2: Foto pareja1 -->
  <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
  </section>
     
@@ -166,8 +166,8 @@
   </div>
 </section>
 
-    <!-- MÓDULO 7: Foto final + cuenta regresiva -->
-    <section class="module" id="module5"><img src="images/foto_pareja2.jpeg" alt="Pareja">
+ <!-- MÓDULO 7: Foto final 2 + cuenta regresiva -->
+<section class="module" id="module5"><img src="images/foto_pareja2.jpeg" alt="Pareja">
       <div class="subtitle">Faltan:</div>
       <div class="countdown" style="justify-content:center;">
         <div><span id="days2"></span>DÍAS</div>
@@ -175,7 +175,7 @@
         <div><span id="minutes2"></span>MIN</div>
         <div><span id="seconds2"></span>SEG</div>
       </div>
-    </section>
+</section>
 
     <!-- MÓDULO 8: despedida -->
 <section>
