--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 </section>
 
     <!-- MÓDULO 1: Invitación -->
-<section>
-  <div class="invitar1"><img src="assets/invitar.png" alt="Separador floral">
-  </div>
+<section class="invitar1"><img src="assets/invitar.png" alt="invitar">
 </section>
 
     <!-- MÓDULO 2: Foto pareja1 -->
