--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- PAPER -->
   <div class="paper">
 
-      <!-- SEPARADOR ELEGANTE00 -->
+      <!-- SEPARADOR ELEGANTE floral-->
 <section>
   <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
@@ -53,7 +53,7 @@
  <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
  </section>
     
-    <!-- SEPARADOR ELEGANTE1 -->
+    <!-- SEPARADOR ELEGANTE01-->
 <section>
   <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
   </div>
