--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
   <!-- PAPER -->
   <div class="paper">
 
-      <!-- SEPARADOR ELEGANTE floral-->
-<section>
-  <div class="graphic-separator"><img src="assets/separador-floral.png" alt="Separador floral">
-  </div>
-</section>
+    <!-- SEPARADOR -->
+    <div class="graphic-separator">
+      <img src="assets/separador-floral.png" alt="Separador floral">
+    </div>
 
     <!-- MÓDULO 1: Invitación -->
 <section class="invitar1"><img src="assets/invitar.png" alt="invitar">
@@ -53,11 +52,10 @@
  <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
  </section>
     
-    <!-- SEPARADOR ELEGANTE01-->
-<section>
-  <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
-  </div>
-</section>
+  <!-- SEPARADOR -->
+    <div class="graphic-separator">
+      <img src="assets/separador-floral.png" alt="Separador floral">
+    </div>
 
     <!-- MÓDULO 3: Lugar -->
 <section class="module" id="module3">
@@ -69,22 +67,20 @@
   </div>
 </section>
 
-    <!-- SEPARADOR ELEGANTE2 -->
-<section>
-  <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
-  </div>
-</section>
+   <!-- SEPARADOR -->
+    <div class="graphic-separator">
+      <img src="assets/separador-floral.png" alt="Separador floral">
+    </div>
 
     <!-- MÓDULO 4: TIEMPOS -->
 <section> 
     <div class="module" id="module2"><img src="images/info3.jpg" alt="Pareja"> </div>
 </section>
 
-  <!-- SEPARADOR ELEGANTE3 -->
-<section>
-  <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
-  </div>
-</section>
+  <!-- SEPARADOR -->
+    <div class="graphic-separator">
+      <img src="assets/separador-floral.png" alt="Separador floral">
+    </div>
 
     <!-- MÓDULO 5: RSVP -->
 <section class="module" id="module4">
@@ -143,11 +139,10 @@
 </section>
 
 
-  <!-- SEPARADOR ELEGANTE4 -->
-<section>
-  <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
-  </div>
-</section>
+  <!-- SEPARADOR -->
+    <div class="graphic-separator">
+      <img src="assets/separador-floral.png" alt="Separador floral">
+    </div>
 
     <!-- MÓDULO 6: hospedaje -->
 <section class="module" id="module3"><div class="image-overlay"><img src="images/hospedaje.png" alt="Lugar">
@@ -158,11 +153,10 @@
   </div>
 </section>
 
-<!-- SEPARADOR ELEGANTE5 -->
-<section>
-  <div class="graphic-separator1"><img src="assets/separador-floral.png" alt="Separador floral">
-  </div>
-</section>
+ <!-- SEPARADOR -->
+    <div class="graphic-separator">
+      <img src="assets/separador-floral.png" alt="Separador floral">
+    </div>
 
  <!-- MÓDULO 7: Foto final 2 + cuenta regresiva -->
 <section class="module" id="module5"><img src="images/foto_pareja2.jpeg" alt="Pareja">
