--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <div class="graphic-separator">
       <img src="assets/separador-floral.png" alt="Separador floral">
     </div>
-
-    <!-- MÓDULO 1: Invitación -->
-<section class="invitar1"><img src="assets/invitar.png" alt="invitar">
-</section>
+ 
+    <!-- INVITACIÓN -->
+     <section class="module" id="module1"><img src="assets/invitar.png" alt="Pareja">
+ </section>
 
     <!-- MÓDULO 2: Foto pareja1 -->
  <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
@@ -74,7 +74,7 @@
 
     <!-- MÓDULO 4: TIEMPOS -->
 <section> 
-    <div class="module" id="module2"><img src="images/info3.jpg" alt="Pareja"> </div>
+    <div class="module" id="module4"><img src="images/info3.jpg" alt="Pareja"> </div>
 </section>
 
   <!-- SEPARADOR -->
@@ -83,7 +83,7 @@
     </div>
 
     <!-- MÓDULO 5: RSVP -->
-<section class="module" id="module4">
+<section class="module" id="module5">
   <div class="paper-card">
 
     <div class="subtitle">RSVP</div>
@@ -145,7 +145,7 @@
     </div>
 
     <!-- MÓDULO 6: hospedaje -->
-<section class="module" id="module3"><div class="image-overlay"><img src="images/hospedaje.png" alt="Lugar">
+<section class="module" id="module6"><div class="image-overlay"><img src="images/hospedaje.png" alt="Lugar">
  <a class="map-link overlay"href="https://maps.app.goo.gl/FBUYcQTGuFXcTV3M9"
       target="_blank">
       VER HOTELES
@@ -159,7 +159,7 @@
     </div>
 
  <!-- MÓDULO 7: Foto final 2 + cuenta regresiva -->
-<section class="module" id="module5"><img src="images/foto_pareja2.jpeg" alt="Pareja">
+<section class="module" id="module7"><img src="images/foto_pareja2.jpeg" alt="Pareja">
       <div class="subtitle">Faltan:</div>
       <div class="countdown" style="justify-content:center;">
         <div><span id="days2"></span>DÍAS</div>
