--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
       <img src="assets/separador-floral.png" alt="Separador floral">
     </div>
  
-    <!-- INVITACIÓN -->
-     <section class="module" id="module1"><img src="assets/invitar.png" alt="Pareja">
- </section>
+     <!-- INVITACIÓN -->
+    <div class="invitar1">
+      <img src="assets/invitar.png" alt="Invitación">
+    </div>
 
     <!-- MÓDULO 2: Foto pareja1 -->
  <section class="module" id="module2"><img src="images/foto_pareja1.jpeg" alt="Pareja">
