--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
   Invitación válida para <strong><span id="maxInvitadosText"></span> personas</strong>
 </p>
 <input type="hidden" name="invitado" id="guestName">
+<input type="hidden" name="origen" id="origenLink">
 
   <button type="submit">CONFIRMAR ASISTENCIA</button>
 </form>
@@ -282,6 +283,7 @@ document.getElementById("maxInvitadosText").textContent = maxInvitados;
 const params = new URLSearchParams(window.location.search);
 const guestName = params.get("name")?.replace(/_/g, " ") || "Invitado";
 
+document.getElementById("origenLink").value = window.location.href;
 document.getElementById("guestName").value = guestName;
 </script>
 
