Add 6 to allowed guest numbers

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ const params = new URLSearchParams(window.location.search);
 let maxInvitados = parseInt(params.get("max"));
 
 // Valores permitidos
-const permitidos = [2, 3, 4, 5];
+const permitidos = [2, 3, 4, 5, 6];
 
 // Seguridad
 if (!permitidos.includes(maxInvitados)) {
